--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+
 }
 
 .header-section {
@@ -192,7 +193,7 @@ body {
     padding: 110px;
     justify-content: center;
     margin-left: 400px;
-    margin-bottom: 90px;
+    margin-bottom: 120px;
 }
 
 .subscribe-update input {
@@ -217,4 +218,25 @@ body {
     font-size: 22px;
     border-radius: 0px 10px 10px 0px;
     color: white;
+}
+
+footer {
+    background-color: #121212;
+    padding: 100px;
+}
+
+.footer h3 {
+    font-size: 70px;
+    color: #FF5959;
+    text-align: center;
+    font-family: 'Lobster Two';
+}
+
+.footer p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    color: white;
+    text-align: center;
+    margin-top: 20px;
+
 }
