--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ body {
 }
 
 .donate-plan-section {
-    height: 800px;
+    height: 900px;
 }
 
 .donate-plan-content {
@@ -166,6 +166,37 @@ body {
 
 .education {
     background-color: #FFF4D6;
+}
+
+
+.our-works {
+    background-color: #fafafa;
+    height: 800px;
+    width: 100%;
+}
+
+.our-works h2 {
+    text-align: center;
+    font-weight: 700;
+    font-size: 70px;
+    margin-top: 70px;
+    padding-top: 90px;
+    padding-bottom: 30px;
+}
+
+.our-works img {
+    border-radius: 6px;
+    height: 40%;
+    margin: 20px 20px;
+    border: 4px solid #e4e4e4;
+}
+
+.works-images {
+    display: flex;
+    justify-content: center;
+    height: 95%;
+    ;
+
 }
 
 .get-updates {
